--- a/estilo.css
+++ b/estilo.css
@@ -63,16 +63,16 @@ main{
 
 .logoBx img{
     position: relative;
-    height: 40vh;
+    height: 30vh;
     margin-top: 3rem;
 }
 
-.logo{
+/* .logo{ */
     /* animation: 0.8s logoShadow infinite alternate; */
-    filter: drop-shadow(0 0 2px var(--color-tercero))
+    /* filter: drop-shadow(0 0 2px var(--color-tercero))
     drop-shadow(0 0 2px var(--color-secundario))
-    drop-shadow(0 0 4px var(--color-primario));  
-}
+    drop-shadow(0 0 4px var(--color-primario));   */
+/* } */
 
 .hero{
     display: flex;
