cambios en imagenes y hovers

--- a/estilo.css
+++ b/estilo.css
@@ -1,18 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:400');
 
-:root{
-    --color-primario: rgb(0,0,40);
-    --color-secundario: rgb(204,255,2);
-    --color-tercero: rgb(255,255,255);
+:root {
+    --color-azul: #000028;
+    --color-amarillo: #CCFF02;
+    --color-amarillo-primary: #CCFF02;
+    --color-amarillo-second: #ff7300;
+    --color-amarillo-tetrad: #0dff33;
+    --color-amarillo-accent: #3300ff;
+
+    --color-tercero: rgb(255, 255, 255);
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 16px;
     color: var(--color-tercero);
     font-family: 'Ubuntu', sans-serif;
@@ -21,12 +26,13 @@ html{
 }
 
 
-body{
+body {
     height: 100vh;
     width: 100vw;
+
 }
 
-main{
+main {
     height: 100%;
     width: 100%;
     display: flex;
@@ -35,9 +41,9 @@ main{
 
 }
 
-.fondo{
+.fondo {
     position: fixed;
-    background: url('oficinas_neon.jpg');
+    background: url('./images/oficinas_neon.jpg');
     width: 100%;
     height: 100%;
     background-position: center;
@@ -46,12 +52,12 @@ main{
     z-index: -2;
 }
 
-.fondo_color{
+.fondo_color {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba( 0, 0, 40, 0.4 );
-    backdrop-filter: blur( 3px );
+    background: rgba(0, 0, 40, 0.4);
+    backdrop-filter: blur(3px);
     border-radius: 10px;
     z-index: -1;
     display: flex;
@@ -61,40 +67,41 @@ main{
 
 
 
-.logoBx img{
+.logoBx img {
     position: relative;
-    height: 30vh;
+    height: 40vh;
     margin-top: 3rem;
 }
 
 /* .logo{ */
-    /* animation: 0.8s logoShadow infinite alternate; */
-    /* filter: drop-shadow(0 0 2px var(--color-tercero))
+/* animation: 0.8s logoShadow infinite alternate; */
+/* filter: drop-shadow(0 0 2px var(--color-tercero))
     drop-shadow(0 0 2px var(--color-secundario))
     drop-shadow(0 0 4px var(--color-primario));   */
 /* } */
 
-.hero{
+.hero {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
     align-items: center;
 }
 
-h1{
-    font-size:2.6rem;
+h1 {
+    font-size: 2.6rem;
     width: 90vw;
 }
 
-p{
+p {
     letter-spacing: 0.1rem;
-    color: rgba(240,240,255,0.9);
+    color: rgba(240, 240, 255, 0.9);
     font-size: 1.3rem;
     width: 70vw;
 }
 
 
-.social{
+
+.social {
     display: flex;
     flex-direction: row;
     gap: 3rem;
@@ -104,31 +111,37 @@ p{
     filter: drop-shadow(0 0 5px rgb(249, 250, 255));
 }
 
-.fa-brands{
+.fa-brands {
+    font-size: 3rem;
     text-decoration: none;
     color: #fff;
+    transition: 0.3s color ease;
 }
 
-.fa-brands:hover{
+.fa-brands:hover {
     filter: drop-shadow(0 0 5px var(--color-secundario));
     color: var(--color-primario);
-    
+    transition: 0.2s  color ease;
 }
 
 
-.wts{
+
+.wts {
     position: fixed;
     bottom: 1rem;
     right: 1rem;
 }
 
-.fa-whatsapp{
+.fa-whatsapp:hover {
+    box-shadow: 0 0px 16px 2px #0dff33;
+    transition: 0.2s all  ease;
+}
+.fa-whatsapp {
     font-size: 2rem;
     background-color: #25D366;
     padding: 1.3rem 1.4rem;
     border-radius: 50%;
     color: #fff;
-    box-shadow: 0 0px 16px 2px var(--color-secundario);   
-    border: 1px solid rgba(255,255,255,0.4);
-
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    transition: 0.3s all  ease;
 }
